# Mira

./: .dockerignore  .env.example  .gitignore  .mcp.json  API.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  HOUSECLEANING_SUMMARY.md  ISSUES_TO_CREATE.md  LICENSE  Leptos.toml  PROGRESS.md  README.md  REDESIGN.md  ROADMAP.md  SESSION.md  TODO.md  USERGUIDE.md  WHITEPAPER.md  all_functions.txt  build-studio.sh  build_log.txt  check-db.sh  check-qdrant-config.sh  claude_cleanup.py  cleanup_legacy_references.sh  config.toml  demo.cast  docker-compose.yml  final_phase1_fixes.py  fix-compilation.sh  fix-test-imports.sh  fix_checksums.sh  fix_message_router.py  fix_missing_modules.py  (+38 more)
backend/: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  PROGRESS.md  README.md  WHITEPAPER.md  docker-compose.yaml  hello_world.py
backend/.sqlx/: query-0317718d15e1b6c15ad50c27c9ddc4fc138360a2d4f902ee1b965ce5a9318ecd.json  query-0466e26b1f77dd8f555038f96da94a2cfd90cd513a780aa72a424c73f1fab5c0.json  query-05354182c574d139c62662c3606094820236809bab800a61a8a7abe36c5bc554.json  query-06964c88c157d54871dc534e7750482ac940af850aef782935f7491329576fda.json  query-06b3ba9a0b558eec7bfe8415aacabfcecc587154c5e8c5997c991cec46bd2d49.json  query-07b78117f191eac778b76456fb1382090860aff82f7cd06256f6904794a89a96.json  query-0a5ed8001e4d9bd6b17397167a77b79b1fec289e3baaeba2f6a4ced354d355b7.json  query-0e48d05f67df5dedce6841444b5385fe5b086a1941f2c893608f7376caba768b.json  query-10d05b9229d1af61e1e17e9bc958bce4e1268d2805711e43b0b546617738dd32.json  query-15c3ffa8edfcc2fc3656f5ae545c00ca5b3dc125b3554854d829c174e51b5d0d.json  query-1651bc467fe4617fdcb37f3e3cfb3d9a1cd4059d12972d8e8308528c63c955dd.json  query-19f3580a57a6e7eb74747282ddfed2f982109c03264f65866749427f190f4101.json  query-1bac79b6ac5cb9f8f49c969dc5c1f3b000c026d9687bb723268e9d69ea5894a9.json  query-1c052199e30b46bf62fa5f7c53983eb19dbab52440d03e1222be705a4fe96521.json  query-1cd49b3d0c09fd3969328ec9c6d08a97dd6ab11de94e1f72b003a7d36034ce2c.json  query-1d37f3b1971da322e6f1baf93e890b849027d5ec4e4e89e59382861142b956b8.json  query-1e736f0fff487d0540bec2cebab7f66c2ddf70ef61a0523961de9378442d79e5.json  query-204a3ff216f6a8c83e8e6611f53783bfc43d77cf83065063d8aefc82d7e006ad.json  query-20bee915f20176650706521bba6cf3cfb32a89b4eab60c1a4dbbc23b9f87dd47.json  query-2103243798851f7a9dcfd120d1fbfea00aaa4309f735660a6f52c48639595794.json  query-213ce2f8bc3d239310e00e41d6f0229a81b0da2513fee0ecf13dd1567a9a027f.json  query-22211687dd05626629d1f67e331ca11228b2b79bbfca6ba8129f148d6b39c0f4.json  query-22663b6d2b0f1b1129742211410d363b77be595cfdc12191341ac1fc7c5280d0.json  query-2291c6530792edf34cb05a964949e21aedc796d380e49f1c09874c9c738eb651.json  query-2373fd3462aa40776dbdea8a8751791ee33f39f8733fb420ffab2979a06c44b2.json  query-2421f05da23b8163fbe5786badfe6cb3b0cdd33c524238d3ee8fc893f3c6be5a.json  query-262be3ee72f5e8c8fc3d7479ce3dde3e480cef142a334bc30caef2197c0ba614.json  query-26fcc8c5a75e412f572fb3eca01df62c789fb1c1ad65f410444b504dae6e01b3.json  query-28b9c1d3f174c85babd2d0ca8b5deed2663bebcf9edf78ec847f3e241357a0a9.json  query-28def004934d35906e72c2e37a965e38fcbb8481de8e560e6eca91c5ac6d46ee.json  query-291de64a8301bb5b142cc7216711b6edba6ab2ab472206aec4d96c5b0fd94a2f.json  query-2c49baf51a795c26d663b461484eb3c1f22e5fda4b8a8162adbaa1d27e5adb7b.json  query-2ef3e1f0377e394f0a2816f4ae242eaf5a39eb2c526a6375105a91a2f1b9a3a9.json  query-2f24c48816d9e43112d02ded8e2982591aab7c50254c5e176da599cd8d942cb7.json  query-2f675f0302a0fd4fb728aed032d0e121bd73d45ad310c73e4ed21ee74c9bb538.json  query-2fe3247ba8a04387c0142900b397ac1107c3ed3d23e0171c04c5b5a6abd92932.json  query-306ac591a74559872b3a51ce304e9979d8a5cf7dc6aef96d1f8e8fd4b91bb55e.json  query-3277142caf08c3798046a5546d1b91778e26e6acf22a940484afe1bbeee656f9.json  query-32a9675a093e25c66950d327c3ab0a7d7f37e5198fc5240c888ec20cfa9cfe0c.json  query-33e84559af4d0e17e3d86cb8fab7d5f97c8f07347c0098557155d6722106b6b2.json  (+145 more)
backend/config/: qdrant.yaml
backend/docs/: MIRA_MCP_SERVER_DESIGN.md
backend/migrations/: 20251016_unified_baseline.sql  20251115_project_scoped_terminals.sql  20251116_sudo_permissions.sql  20251117_operation_tasks.sql  20251118_planning_mode.sql  20251119_users_auth.sql  20251125000001_foundation.sql  20251125000002_code_intelligence.sql  20251125000003_git_intelligence.sql  20251125000004_operations.sql  20251125000005_documents.sql  20251125000007_build_system.sql  20251125000008_budget_cache.sql  20251125000009_project_context.sql  20251125000010_checkpoint_system.sql  20251125000011_chat_sessions.sql  20251125000012_sudo_system.sql  20251125000013_remove_budget_user_fk.sql  20251125000014_dual_session.sql  20251125_001_foundation.sql  20251125_002_code_intelligence.sql  20251125_004_operations.sql  20251125_005_documents.sql  20251125_006_tool_synthesis.sql  20251207000001_fix_document_chunks_ids.sql  20251208053335_project_session_tracking.sql  20251208070226_add_tokens_cached_to_budget.sql  20251208071137_session_cache_state.sql  20251208080303_cleanup_schema.down.sql  20251208080303_cleanup_schema.up.sql  20251209000001_foundation.sql  20251209000002_code_intelligence.sql  20251209000003_operations.sql  20251209000004_infrastructure.sql
backend/scenarios/: agent_explore.yaml  agent_general.yaml  agent_plan.yaml  code_search.yaml  complex_operation.yaml  file_operations.yaml  git_operations.yaml  mcp_infrastructure.yaml  mock_test.yaml  multi_turn.yaml  smoke_test.yaml  test_run_tests_tool.yaml  tool_execution_flow.yaml
backend/scripts/: db-reset-qdrant.sh  db-reset-sqlite.sh  db-reset-test.sh  db-reset.sh  reset_embeddings.sh
backend/skills/: debugging.md  documentation.md  refactoring.md  testing.md
backend/src/: api_stubs.rs  context_oracle_stubs.rs  lib.rs  llm.rs  llm_stubs.rs  main.rs  prompt_stubs.rs  state.rs  state_stubs.rs  utils.rs
backend/tests/: artifact_flow_test.rs  budget_test.rs  cache_ab_comparison_test.rs  cache_incremental_test.rs  code_embedding_test.rs  deepseek_live_test.rs  (+21 more)
mira-chat/: Cargo.toml  FEATURES.md
mira-core/: Cargo.toml
(+2080 files in other folders)
