[package]
name = "mira"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
description = "Memory and Intelligence Layer for Claude Code"

[lib]
name = "mira"
path = "src/lib.rs"

[[bin]]
name = "mira"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }

# Vector database
qdrant-client = "1.16"

# MCP Server
rmcp = { version = "0.11", features = ["server", "transport-io"] }
schemars = "1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Core utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for Gemini embeddings API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Code parsing (tree-sitter for multi-language support)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# Git operations
git2 = "0.19"

# File system utilities
walkdir = "2.5"
notify = "7.0"
ignore = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
dotenv = "0.15"
