[package]
name = "mira-backend"
version = "0.9.0"
edition = "2024"

[lib]
name = "mira_backend"
path = "src/lib.rs"

[[bin]]
name = "mira"
path = "src/bin/mira.rs"

[[bin]]
name = "mira-backend"
path = "src/main.rs"
[dependencies]
# Web framework - WebSocket only
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.38", features = ["full"] }
# Serialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# HTTP client for external APIs (OpenAI, etc)
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "stream", "multipart", "blocking"] }
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
# Core utilities
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
futures = "0.3"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2"
lazy_static = "1.5.0"
# Git integration
git2 = "0.20"
# File and data handling
base64 = "0.22"
bytes = "1.5"
# Streaming and async - UPDATED FOR STREAMING SUPPORT
tokio-stream = { version = "0.1", features = ["net", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3.31"
# Rate limiting and retry logic
governor = "0.10"
parking_lot = "0.12.4"
quote = "1.0.40"
sha2 = "0.10.9"
syn = { version = "2.0.106", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.11.2"
# Vector database - latest stable
qdrant-client = "1.15"
# Document processing
pdf-extract = "0.10"
lopdf = "0.38"
zip = "6"
encoding_rs = "0.8"
mime_guess = "2.0"
quick-xml = "0.38"
swc_ecma_parser = "27"
swc_ecma_ast = "18"
swc_common = "17"
swc_ecma_visit = "18"
walkdir = "2.5.0"
glob = "0.3.3"
# File system watching
notify = "8"
notify-debouncer-full = "0.5"
# Diff generation
similar = "2"
urlencoding = "2.1.3"
html-escape = "0.2.13"
# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.17"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6.0.0"

# CLI dependencies
tokio-tungstenite = "0.28"
crossterm = "0.28"
indicatif = "0.17"
console = "0.15"
rustyline = "15"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"
url = "2.5.0"
uuid = { version = "1.8", features = ["v4"] }
