[package]
name = "mira-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Mira Studio - Leptos WASM frontend"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types
mira-types = { path = "../mira-types" }

# Leptos (CSR mode for WASM)
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Node",
    "NodeList",
    "Window",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Location",
    "Navigator",
    "Clipboard",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Utilities
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"

# Syntax highlighting (pure Rust for WASM)
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "html"] }
