[package]
name = "mira-server"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Memory and Intelligence Layer for Claude Code - Server"

[lib]
name = "mira"
path = "src/lib.rs"

[[bin]]
name = "mira"
path = "src/main.rs"

[dependencies]
# Shared types
mira-types = { path = "../mira-types" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (rusqlite + sqlite-vec for embeddings)
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1"
deadpool-sqlite = { version = "0.12", features = ["rt_tokio_1", "tracing"] }

# MCP Server
rmcp = { version = "0.12", features = ["server", "client", "transport-io", "transport-child-process", "macros"] }
schemars = "1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Core utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

# HTTP client (for embeddings API)
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "multipart"] }

# Code parsing (tree-sitter for multi-language support)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25.0"

# Git operations
git2 = "0.20"

# File system utilities
walkdir = "2.5"
notify = "8.0"
ignore = "0.4"
dirs = "6.0.0"
regex = "1.12.2"

# Additional utilities
urlencoding = "2.1"
dotenvy = "0.15.7"
toml = "0.8"
scraper = "0.20"
async-trait = "0.1"
thiserror = "2.0"
sha2 = "0.10"
nucleo-matcher = "0.3"
url = "2.5.7"
futures = "0.3.31"

# Performance optimizations
moka = { version = "0.12", features = ["future"] }
rayon = "1.10"

[dev-dependencies]
tempfile = "3.8"
